--- a/Website/public/css/custom.css
+++ b/Website/public/css/custom.css
@@ -1,20 +1,41 @@
-.titleBar{
-	/*background-image: url("../images/titleBar.png");*/
+@font-face {
+	font-family: flashbackDemo;
+	src: url("../fonts/flashbackDemo.ttf") format("truetype");
 }
 
-.titleBarImage{
-	margin-top: 2rem;
-	padding: 20px 0 20px 0;
+@font-face {
+	font-family: typewriter;
+	src: url("../fonts/travelingTypewriter.ttf") format("truetype");
+}
+
+#titleBar{
+	background-image: url("../images/woodBackground.png");	
+}
+
+#topSpacing{
+	width: 100%;
+	height: 2rem;
+}
+
+#bottomBar{
+	background-image: url("../images/woodBackgroundSmall.png");	
+}
+
+.woodInfoBar{
+	padding: 15px 0 15px 0;
 	width: auto;
-	background-image: url("../images/titleBar.png");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
 }
 
-@font-face {
-	font-family: flashbackDemo;
-	src: url("../fonts/flashbackDemo.ttf") format("truetype");
+.container{
+	font-family: typewriter !important;
+}
+
+html, body {
+	margin: 0 !important;
+	padding: 0 !important;
 }
 
 h1{
@@ -22,8 +43,12 @@ h1{
 	font-size: 180px;
 }
 
+h2 {
+	font-size: 61px;
+}
+
 @media only screen and (max-width: 1100px) { 
-	.titleBarImage{
+	.woodInfoBar{
 		margin-top: 0;
 		padding: 10px 0 10px 0;
 	}
@@ -31,15 +56,28 @@ h1{
 	h1 {
 		font-size: 110px;
 	}
+
+	h2 {
+		font-size: 45px;
+	}
 }
 
 @media only screen and (max-width: 600px) {
-	.titleBarImage{
+	.woodInfoBar{
 		margin-top: 0;
 		padding: 5px 0 5px 0;
 	}
 
+	#topSpacing {
+		height: 0;
+	}
+	
 	h1 {
 		font-size: 80px;
+	}
+	
+
+	h2 {
+		font-size: 35px;
 	}
 }
