--- a/Website/public/css/custom.css
+++ b/Website/public/css/custom.css
@@ -1,93 +1,95 @@
+/* Fonts */
 @font-face {
 	font-family: flashbackDemo;
 	src: url("../fonts/flashbackDemo.ttf") format("truetype");
 }
-
 @font-face {
 	font-family: typewriter;
 	src: url("../fonts/travelingTypewriter.ttf") format("truetype");
 }
 
-#titleBar{
-	background-image: url("../images/woodBackground.png");	
-	height: 150px;
-}
-
-#topSpacing{
-	width: 100%;
-	height: 2rem;
-}
-
-#bottomBar{
-	background-image: url("../images/woodBackgroundSmall.png");	
-}
-
-.imageContainer{/*1,48666667*/
-	height:743px;/*1115*/
-	width:500px;/*750*/
-	margin:2rem auto 2rem auto;
-}
-
-#saveTheDateImg{
-	background-image: url("../images/saveTheDate.png");	
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 100%;
-}
-
-.woodInfoBar{
-	width: 100%;
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-    text-align: center;
-}
-
-#wrapper{
-	min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	margin: 0 auto -70px;
-}
-
-body{
-	background-color: #ded2b7;
-}
-
-#bottomBar, .overlap{
-	height:70px;
-	padding: 13px 0;
-}
-
+/* Standard settings */
 html {
 	box-sizing: border-box;
 }
 *, *:before, *:after {
   box-sizing: inherit;
 }
-
 html, body {
 	height: 100%;
 	margin: 0 !important;
 	padding: 0 !important;
+	background-color: #ded2b7;
+}
+
+/* Text settings */
+h1{
+	font-family: flashbackDemo !important;
+}
+p, h2, h3, h4 {
+	font-family: typewriter !important;	
+	margin-bottom: 0 !important;
+}
+
+/*  Wood info bars */
+.woodInfoBar{
+	width: 100%;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+    display: flex;
+    align-items: center; /* horizontal */
+    justify-content: center; /* vertical */	
+}
+#titleBar{
+	background-image: url("../images/woodBackground.png");	
+}
+#bottomBar{
+	background-image: url("../images/woodBackgroundSmall.png");
+}
+
+#saveTheDateImg{
+	background-image: url("../images/saveTheDateWithoutLeaves.png");	
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 100%;
+}
+
+/* Screen size dependent sizing & positioning */
+#titleBar{
+	height: 150px;
+}
+#wrapper{
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -70px;
+}
+#bottomBar, .overlap{
+	height:70px;
+}
+
+.imageContainer{/*1,48666667*/
+	height:743px;/*743, 1115*/
+	width:500px;/*500, 750*/
+	margin:2rem auto 2rem auto; 
+	background-position: center;
 }
 
 h1{
-	font-family: flashbackDemo !important;
 	font-size: 130px;
 }
-
 h2 {
 	font-size: 35px;
 }
 
-h2, p {
-	font-family: typewriter !important;	
-}
-
 @media only screen and (max-width: 1100px) { 
+	.imageContainer{
+		margin: 0 auto;
+	}
+	
 	#titleBar{
 		height: 100px;		
 	}
@@ -102,14 +104,6 @@ h2, p {
 }
 
 @media only screen and (max-width: 600px) {
-	#topSpacing {
-		height: 0;
-	}
-	
-	.imageContainer{
-		margin: 0 auto;
-	}
-	
 	#titleBar{
 		height: 80px;		
 	}
