--- a/Website/public/css/custom.css
+++ b/Website/public/css/custom.css
@@ -1,13 +1,3 @@
-/* Fonts */
-@font-face {
-	font-family: flashbackDemo;
-	src: url("../fonts/flashbackDemo.ttf") format("truetype");
-}
-@font-face {
-	font-family: typewriter;
-	src: url("../fonts/travelingTypewriter.ttf") format("truetype");
-}
-
 /* Standard settings */
 html {
 	box-sizing: border-box;
@@ -16,19 +6,42 @@ html {
   box-sizing: inherit;
 }
 html, body {
-	height: 100%;
 	margin: 0 !important;
 	padding: 0 !important;
 	background-color: #ded2b7;
 }
 
 /* Text settings */
+@font-face {
+	font-family: flashbackDemo;
+	src: url("../fonts/flashbackDemo.ttf") format("truetype");
+}
+@font-face {
+	font-family: typewriter;
+	src: url("../fonts/travelingTypewriter.ttf") format("truetype");
+}
 h1{
 	font-family: flashbackDemo !important;
 }
 p, h2, h3, h4 {
 	font-family: typewriter !important;	
 	margin-bottom: 0 !important;
+}
+
+/* Side bars */
+.sideBar{
+	position: fixed;
+	height: 100%;
+	background-size: cover;
+	background-position: center;
+	background-repeat: repeat-y;
+}
+#leavesLeft{
+	background-image: url("../images/leavesLeft.png");
+}
+#leavesRight{
+	background-image: url("../images/leavesRight.png");
+	right: 0;
 }
 
 /*  Wood info bars */
@@ -48,50 +61,66 @@ p, h2, h3, h4 {
 	background-image: url("../images/woodBackgroundSmall.png");
 }
 
+/* Other */
 #saveTheDateImg{
 	background-image: url("../images/saveTheDateWithoutLeaves.png");	
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-	width: 100%;
-	height: 100%;
+}
+#wrapper{
+	min-height: 100% !important;
 }
 
 /* Screen size dependent sizing & positioning */
-#titleBar{
-	height: 150px;
-}
-#wrapper{
-	min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	margin: 0 auto -70px;
-}
-#bottomBar, .overlap{
-	height:70px;
-}
 
-.imageContainer{/*1,48666667*/
-	height:743px;/*743, 1115*/
-	width:500px;/*500, 750*/
-	margin:2rem auto 2rem auto; 
-	background-position: center;
-}
+@media only screen and (min-width: 1101px) {
+	.sideBar{
+		width: 300px;
+	}
 
-h1{
-	font-size: 130px;
-}
-h2 {
-	font-size: 35px;
-}
+	#saveTheDateImg{	
+		height:880px;
+		width:600px;
+		margin:2rem auto;
+	}
+	
+	#titleBar{
+		height: 150px;
+	}
+	#wrapper{
+		margin: 0 auto -70px;
+	}
+	#bottomBar, .overlap{
+		height:70px;
+	}
 
+	h1{
+		font-size: 130px;
+	}
+	h2 {
+		font-size: 35px;
+	}
+}
 @media only screen and (max-width: 1100px) { 
-	.imageContainer{
+	.sideBar{
+		width: 300px;
+	}
+
+	#saveTheDateImg{	
+		height:880px;
+		width:600px;
 		margin: 0 auto;
 	}
 	
 	#titleBar{
 		height: 100px;		
+	}
+	#wrapper{
+		margin: 0 auto -70px;
+	}
+	#bottomBar, .overlap{
+		height:70px;
 	}
 
 	h1 {
@@ -104,6 +133,15 @@ h2 {
 }
 
 @media only screen and (max-width: 600px) {
+	.sideBar{
+		width: 200px;
+	}
+
+	#saveTheDateImg{	
+		width: 100%;
+		height: calc(100vw * 1.467);
+	}
+	
 	#titleBar{
 		height: 80px;		
 	}
