--- a/Website/public/css/custom.css
+++ b/Website/public/css/custom.css
@@ -21,6 +21,7 @@ html, body {
 	src: url("../fonts/travelingTypewriter.ttf") format("truetype");
 }
 h1{
+	margin-top: 0.5rem;
 	font-family: flashbackDemo !important;
 }
 p, h2, h3, h4 {
