--- a/Website/public/css/gameLayout.css
+++ b/Website/public/css/gameLayout.css
@@ -3,6 +3,10 @@ h1{
 }
 
 #gameInfo{
+	position: fixed;
+	top: 10px;
+	z-index: 1;
+	
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
