--- a/Website/public/css/gameLayout.css
+++ b/Website/public/css/gameLayout.css
@@ -2,6 +2,53 @@ h1{
 	text-align: center;
 }
 
+button{	
+}
+
+#gameIntroScreen{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index: 2;
+	
+	width: 100%;
+	height: 100%;
+	background-color: #f3e4bf;
+}
+
+#gameIntroScreen img{
+	height: 100%;
+	position: fixed;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+#gameIntroScreen button{
+	position: fixed;
+	width: 250px;
+	height: 50px;
+	bottom: 4.8%;
+    left: 50%;
+    transform: translate(-50%, 0);
+	background-color: #1a2312;
+	color: #f3e4bf;
+    outline: none;
+}
+
+#gameIntroScreen button:hover{
+	width: 260px;
+	height: 60px;
+	bottom: 4.8%;
+    transform: translate(-50%, 5px);
+}
+
+#gameIntroScreen button:active{
+	width: 260px;
+	height: 60px;
+	bottom: 4.8%;
+    transform: translate(-50%, 5px);
+}
+
 #gameInfo{
 	position: fixed;
 	top: 0px;
@@ -64,4 +111,5 @@ h1{
 
 .searchPlateItem{
 	position: absolute;
+    outline: none;
 }
