--- a/Website/public/css/gameLayout.css
+++ b/Website/public/css/gameLayout.css
@@ -2,9 +2,6 @@ h1{
 	text-align: center;
 }
 
-button{	
-}
-
 #gameIntroScreen{
 	position: fixed;
 	top: 0px;
@@ -71,9 +68,10 @@ button{
     position: fixed;
     top: 50%;
     left: 50%;
-    height: 500px;
+    height: 700px;
     width: 600px;
 	max-width: 90% !important;
+	max-height: 95% !important;
     transform: translate(-50%, -50%);
     background-color: aqua;
     display: none;
