--- a/Website/public/css/searchPlateMobile.css
+++ b/Website/public/css/searchPlateMobile.css
@@ -6,38 +6,36 @@
 	width: 100%;
 }
 
+.searchPlateItem{
+	width: 4%;
+}
+
+.searchPlateItem:active{
+	width: 5%;
+    transform: translate(-10%, -10%);
+}
+
 #item1{
-	left: 64.4%;/*696px; 696/1080*100% (1080 = breedte van background image)*/
-	top: 82%;/*1232px; 1232/1500*100% (1500 = hoogte van background image)*/
-	width: 9.6%;/*104/1080*100% (104 = breedte van oorspronkelijk plaatje)*/
+	left: 89%;/*1258*/
+	top: 18%;/*376*/
 }
 
 #item2{
-	left: 2%;/*20px;*/
-	top: 44.7%;/*670px;*/
-	width: 20%;
+	left: 19%;/*272px;*/
+	top: 48%;/*970px;*/
 }
 
 #item3{
-	left: 0.5%;/*56px;*/
-	top: 71.7%;/*1076px;*/
-	width: 20%;
+	left: 6%;/*84px;*/
+	top: 16.7%;/*334px;*/
 }
 
 #item4{
-	left: 79%;/*856px;*/
-	top: 19,3%;/*289px;*/
-	width: 20%;
+	left: 6%;/*90px;*/
+	top: 93%;/*1864px;*/
 }
 
 #item5{
-	left: 16.7%;/*180px;*/
-	top: 35.5%;/*530px;*/
-	width: 17%;
-}
-
-#item6{
-	left: 36.7%;
-	top: 35.5%;
-	width: 17%;
+	left: 79%;/*90px;*/
+	top: 93%;/*1864px;*/
 }
