--- a/Website/public/css/searchPlateWindows.css
+++ b/Website/public/css/searchPlateWindows.css
@@ -6,38 +6,32 @@
 	width: 100%;
 }
 
+.searchPlateItem:hover{
+	width: 4%;
+    transform: translate(-10%, -10%);
+}
+
 #item1{
-	left: 75%;/*1443*/
-	top: 78.2%;/*845*/
-	width: 5.4%;/*104/1920*/
+	left: 89.8%;/*1258*/
+	top: 18.8%;/*376*/
 }
 
 #item2{
 	left: 37%;/*20px;*/
 	top: 13%;/*670px;*/
-	width: 14%;
 }
 
 #item3{
 	left: 25%;/*56px;*/
 	top: 71.7%;/*1076px;*/
-	width: 14%;
 }
 
 #item4{
 	left: 70%;/*856px;*/
 	top: 19,3%;/*289px;*/
-	width: 14%;
 }
 
 #item5{
 	left: 10%;/*210;*/
 	top: 49%;/*572;*/
-	width: 10%;
-}
-
-#item6{
-	left: 36.7%;
-	top: 35.5%;
-	width: 17%;
 }
