--- a/Website/public/css/baseLayout.css
+++ b/Website/public/css/baseLayout.css
@@ -6,10 +6,13 @@ html {
   box-sizing: inherit;
 }
 html, body {
-	height: 100% !important;	
+	min-height: 100% !important;	
 	margin: 0 !important;
 	padding: 0 !important;
 	background-color: #ded2b7;
+}
+#wrapper{
+	min-height: 100% !important;
 }
 
 /* Text settings */
@@ -23,11 +26,66 @@ html, body {
 }
 h1{
 	margin-top: 0.5rem;
-	font-family: flashbackDemo !important;
+	font-family: flashbackDemo;
+}
+h1, h2, h3, h4, h5 {
+	margin-bottom: .5rem;
+    font-weight: 500;
+    line-height: 1.2;
 }
 p, h2, h3, h4 {
-	font-family: typewriter !important;	
-	margin-bottom: 0 !important;
+	font-family: typewriter;	
+}
+
+/* Menu bar settings */
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	float: left;
+}
+
+li a {
+	display: block;
+	color: white;
+	text-align: center;
+	font-family: typewriter;
+	font-size: 2vw;
+	padding: 16px 16px 32px 16px;
+	text-decoration: none;
+    height: 3vw;
+    border-radius:5px;
+}
+
+/*  Wood info bars */
+.woodInfoBar{
+	width: 100%;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+    display: flex;
+    align-items: center; /* horizontal */
+    justify-content: center; /* vertical */	
+}
+#titleBar{
+	background-image: url("../images/woodBackground.jpg");	
+	flex-wrap: wrap;
+}
+#bottomBar{
+	background-image: url("../images/woodBackgroundSmall.jpg");
+}
+
+/* Menu */
+#title{
+	text-align: center;
+	flex-basis: 100%;
+}
+#menu{
+	height: 130px;
+	margin-top: -75px;
 }
 
 /* Side bars */
@@ -46,56 +104,13 @@ p, h2, h3, h4 {
 	right: 0;
 }
 
-/*  Wood info bars */
-.woodInfoBar{
-	width: 100%;
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-    display: flex;
-    align-items: center; /* horizontal */
-    justify-content: center; /* vertical */	
-}
-#titleBar{
-	background-image: url("../images/woodBackground.jpg");	
-}
-#bottomBar{
-	background-image: url("../images/woodBackgroundSmall.jpg");
-}
-
-/* Other */
-#saveTheDateImg{
-	background-image: url("../images/saveTheDate.jpg");
-	max-width: 100% !important;	
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-#wrapper{
-	min-height: 100% !important;
-}
-
 /* Screen size dependent sizing & positioning */
-
 @media only screen and (min-width: 1101px) {
-	.sideBar{
-		width: 150px;
-	}
-
-	#saveTheDateImg{	
-		width:360px;
-		height:800px;
-		margin:4rem auto;
-	}
-	
-	#titleBar{
-		height: 150px;
-	}
 	#wrapper{
 		margin: 0 auto -70px;
 	}
 	#bottomBar, .overlap{
-		height:70px;
+		height:79px;
 	}
 
 	h1{
@@ -104,65 +119,48 @@ p, h2, h3, h4 {
 	h2 {
 		font-size: 35px;
 	}
+	
+	.sideBar{
+		width: 150px;
+	}
 }
 @media only screen and (max-width: 1100px) { 
-	.sideBar{
-		width: 135px;
-	}
-
-	#saveTheDateImg{	
-		width:360px;
-		height:800px;
-		margin: 2rem auto;
-	}
-	
-	#titleBar{
-		height: 100px;		
-	}
 	#wrapper{
 		margin: 0 auto -70px;
 	}
 	#bottomBar, .overlap{
-		height:70px;
+		height:73px;
 	}
 
 	h1 {
 		font-size: 85px;
 	}
-
 	h2 {
 		font-size: 28px;
+	}
+	
+	.sideBar{
+		width: 135px;
 	}
 }
 
 @media only screen and (max-width: 600px) {
-	.sideBar{
-		width: 85px;
-	}
-
-	#saveTheDateImg{	
-		width: 315px;
-		height: 700px;
-		margin: 1rem auto;
-	}
-	
-	#titleBar{
-		height: 80px;		
-	}
-	
 	#wrapper{
 		margin: 0 auto -50px;
 	}
 
 	#bottomBar, .overlap{
-		height:50px;
+		height:53px;
 	}
 	
 	h1 {
 		font-size: 70px;
-	}
-	
+	}	
 	h2 {
 		font-size: 20px;
+	}
+	
+	.sideBar{
+		width: 85px;
 	}
 }
