--- a/Website/public/css/gameLayout.css
+++ b/Website/public/css/gameLayout.css
@@ -6,20 +6,7 @@ body{
 	margin: 0;
 }
 
-button{
-	background-color: #1a2312;
-	color: #f3e4bf;
-    outline: none;	
-	width: 250px;
-	height: 50px;
-}
-
-button p{
-	margin-bottom: 0.6rem;
-	font-size: 1rem;
-}
-
-#gameIntroScreen{
+.informationScreen{
 	position: fixed;
 	top: 0px;
 	left: 0px;
@@ -28,51 +15,53 @@ button p{
 	width: 100%;
 	height: 100%;
 	background-color: #f3e4bf;
+	
+	font-size: 2.7vh;
 }
 
-#introTextContainer{
-	position: fixed;
-	width: 100%;
-	top: 11rem;	
-	text-align: center;
-	font-size: 1.6rem;
-}
-
-#introTextContainer p{
-	width: 500px;
-	max-width: 90%;
-	margin: 0 auto;
-}
-
-#introText{
-}
-
-#gameIntroScreen img{
+.informationScreen img{
 	height: 100%;
 	position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
 }
 
-#gameIntroScreen button{
+.informationScreen button{
+	background-color: #1a2312;
+	color: #f3e4bf;
+    outline: none;	
+	width: 250px;
+	height: 50px;
+	padding: 0 0 0.6rem;
+	
 	position: fixed;
 	bottom: 4.8%;
     left: 50%;
     transform: translate(-50%, 0);
 }
 
-#gameIntroScreen button:hover{
+.informationScreen button:hover, .informationScreen button:active{
 	width: 260px;
 	height: 60px;
 	bottom: 4.8%;
     transform: translate(-50%, 5px);
 }
 
-#gameIntroScreen button:active{
-	width: 260px;
-	height: 60px;
-	bottom: 4.8%;
-    transform: translate(-50%, 5px);
+.overlayScreenTextContainer{
+	position: fixed;
+	width: 100%;
+	top: 18%;	
+	text-align: center;
+}
+
+.overlayScreenTextContainer p{
+	width: 60vh;
+	max-width: 90% !important;
+	margin: 0 auto;
+}
+
+#gameProgressScreen{
+	display: none;
 }
 
 #gameInfo{
