--- a/Website/public/css/baseLayout.css
+++ b/Website/public/css/baseLayout.css
@@ -24,39 +24,40 @@ html, body {
 	font-family: typewriter;
 	src: url("../fonts/travelingTypewriter.ttf") format("truetype");
 }
-h1{
-	margin-top: 0.5rem;
-	font-family: flashbackDemo;
-}
 h1, h2, h3, h4, h5 {
-	margin-bottom: .5rem;
+	margin: .5rem 0;
     font-weight: 500;
     line-height: 1.2;
 }
-p, h2, h3, h4 {
+p, h2, h3, h4, h5 {
 	font-family: typewriter;	
+}
+h1{
+	font-family: flashbackDemo;
+	margin: .5rem 0 -0.5rem;
 }
 
 /* Menu bar settings */
-ul {
+#menu {
 	list-style-type: none;
 	margin: 0;
-	padding: 0;
-}
-
-li {
-	float: left;
-}
-
-li a {
-	display: block;
-	color: white;
-	text-align: center;
+	padding: 0 0 1rem;
 	font-family: typewriter;
-	font-size: 2vw;
-	padding: 16px 16px 32px 16px;
+}
+
+#menu li {
+	float: left;
+	
+	display: flex; 
+	justify-content: center; 
+	align-items: center;
+	margin: 0 16px;
+}
+
+#menu li a {
+	color: white;
+	font-size: 3vh;
 	text-decoration: none;
-    height: 3vw;
     border-radius:5px;
 }
 
@@ -72,6 +73,7 @@ li a {
 }
 #titleBar{
 	background-image: url("../images/woodBackground.jpg");	
+	display: flex;
 	flex-wrap: wrap;
 }
 #bottomBar{
@@ -82,10 +84,6 @@ li a {
 #title{
 	text-align: center;
 	flex-basis: 100%;
-}
-#menu{
-	height: 130px;
-	margin-top: -75px;
 }
 
 /* Side bars */
