--- a/Website/public/css/gameLayout.css
+++ b/Website/public/css/gameLayout.css
@@ -26,12 +26,14 @@ body{
     transform: translate(-50%, 0);
 }
 
-.informationScreen button{
+button:not(.finalButton){
 	position: fixed;
 	bottom: 4.8%;
     left: 50%;
     transform: translate(-50%, 0);
-	
+}
+
+button{	
 	background-color: #1a2312;
 	color: #f3e4bf;
     outline: none;	
@@ -45,12 +47,36 @@ body{
 	align-items: center; 
 }
 
-.informationScreen button:hover, .informationScreen button:active{
+button:hover:not(.finalButton), button:active:not(.finalButton){
 	width: 260px;
 	height: 60px;
 	bottom: 4.8%;
     transform: translate(-50%, 5px);
 	font-size: 2.75vh;
+}
+
+#finalScreenButtonContainer{
+	position: fixed;
+	bottom: 8%;
+	width: 100%;
+	padding: 0 2rem 0 2rem;
+	
+	display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	
+	display: none;
+}
+
+#finalScreenButtonContainer button{
+	position: static !important;
+	bottom: auto;
+    left: auto;
+	flex: 0.5;
 }
 
 #gameProgressScreen{
