--- a/Website/public/css/baseLayout.css
+++ b/Website/public/css/baseLayout.css
@@ -36,7 +36,7 @@ h2, h3, h4, h5 {
 	font-family: typewriter;	
 }
 p{
-	font-family: cambria !important;
+	font-family: Cambria, Tahoma, Georgia, serif;
 	font-size: 1.5rem;
     line-height: 1.15;
 }
@@ -96,6 +96,7 @@ p{
 	background-size: cover;
 	background-position: center;
 	background-repeat: repeat-y;
+	pointer-events: none;
 }
 #leavesLeft{
 	background-image: url("../images/leavesLeft.png");
@@ -185,10 +186,12 @@ p{
 	h2 {
 		font-size: 20px;
 	}
-	
 	h3 {
 		font-size: 15px;
-	} 
+	}
+	p{
+		font-size: 1rem;
+	}
 	
 	#menu li a {
 		font-size: 1.2rem;
