--- a/Website/public/css/gameLayout.css
+++ b/Website/public/css/gameLayout.css
@@ -106,12 +106,20 @@ button:hover:not(.finalButton), button:active:not(.finalButton){
 	margin: 10px;
 }
 
+#searchPlateContainer::selection, #searchPlateContainer::-moz-selection{
+    background-color:transparent;	
+}
 #searchPlateContainer{
 	display: table;
 	margin: 0 auto;
 	position: relative;
 	white-space: nowrap;
-	cursor: pointer;
+	-webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .searchPlateItem{
