--- a/Website/public/css/baseLayout.css
+++ b/Website/public/css/baseLayout.css
@@ -40,6 +40,9 @@ p{
 	font-size: 1.5rem;
     line-height: 1.15;
 }
+li p{
+	margin: 5px 0 5px;
+}
 #menu li a {
 	font-family: typewriter;	
 	color: white;
